--- a/about.Rmd
+++ b/about.Rmd
@@ -86,7 +86,7 @@ To help me keep them straight, it would be most convenient to name them in a con
 * [Assignment 1](assign/assign1.pdf) 
   || Some answers: [ans1.R](assign/ans1.R) [ans1.html](assign/ans1.html) 
 * [Assignment 2](assign/assign2.pdf) 
-  <!-- [Answers](assign/ans2.R) -->
+  || Some answers: [ans2.R](assign/ans2.R) [ans2.html](assign/ans2.html) 
 * [Assignment 3](assign/assign3.pdf) 
   <!-- [Answers](assign/ans3.R) -->
 * [Assignment 4](assign/assign4.pdf) 
