update 06-logistic lecture

--- a/index.Rmd
+++ b/index.Rmd
@@ -272,6 +272,11 @@ as clear as possible.
 
 ## Logistic regression
 
+Logistic regression provides an entry to model-based methods for categorical data
+analysis. These provide estimates and tests for predictor variables of a
+binary outcome, but more importantly, allow graphs of a fitted outcome together
+with confidence bands representing uncertainty,
+
 ![](images/headers/logistic.png)
 
 <!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
