--- a/index.Rmd
+++ b/index.Rmd
@@ -104,10 +104,9 @@ and understanding why a given one might not fit well.
 
 <!-- #### Topics: `r icon::fa("list", color="darkgreen")`  -->
 
-<div style="display:flex">
-  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
-  <h4>Topics</h4>
-</div>
+```{r topics2, results='asis', echo=FALSE}
+div_heading("topics")
+```
 
 - Discrete distributions: Basic ideas
 - Fitting discrete distributions
@@ -154,10 +153,9 @@ models for categorical data.
 
 <!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
 
-<div style="display:flex">
-  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
-  <h4>Topics</h4>
-</div>
+```{r topics3, results='asis', echo=FALSE}
+div_heading("topics")
+```
 
 - Overview: $2 \times 2$, $r \times c$, ordered tables
 - Independence
@@ -209,10 +207,9 @@ div_heading("quiz")
 
 <!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
 
-<div style="display:flex">
-  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
-  <h4>Topics</h4>
-</div>
+```{r topics4, results='asis', echo=FALSE}
+div_heading("topics")
+```
 
 - Mosaic displays: Basic ideas
 - Loglinear models
@@ -251,10 +248,9 @@ as clear as possible.
 
 <!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
 
-<div style="display:flex">
-  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
-  <h4>Topics</h4>
-</div>
+```{r topics5, results='asis', echo=FALSE}
+div_heading("topics")
+```
 
 - CA: Basic ideas
 - Singular value decomposition (SVD)
@@ -281,10 +277,9 @@ with confidence bands representing uncertainty,
 
 <!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
 
-<div style="display:flex">
-  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
-  <h4>Topics</h4>
-</div>
+```{r topics6, results='asis', echo=FALSE}
+div_heading("topics")
+```
 
 - Model-based methods: Overview
 - Logistic regression: one predictor, multiple predictors, fitting
@@ -304,14 +299,21 @@ with confidence bands representing uncertainty,
 
 ## Logistic regression: Extensions
 
+The ideas behind logistic regression can be extended in a variety of ways.
+The effects of predictors on a binary response can incorporate non-linear terms
+and interactions. When the outcome is **polytomous** (more than two categories),
+and the response categories are ordered,
+the _proportional odds model_ provides a simple framework.
+Other methods for polytomous outcomes include _nested dichotomies_ and
+the general _multinomial_ logistic regression model.
+
 ![](images/headers/logistic2.png)
 
 
 <!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
-<div style="display:flex">
-  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
-  <h4>Topics</h4>
-</div>
+```{r topics7, results='asis', echo=FALSE}
+div_heading("topics")
+```
 
 - Case study: Survival in the Donner party
 - Polytomous response models
@@ -330,13 +332,18 @@ with confidence bands representing uncertainty,
 
 ## Extending loglinear models
 
+Here we return to loglinear models to consider extensions to the `glm()` framework.
+Models for ordinal factors have greater power when associations reflect their ordered nature.
+The `gnm` package extends these to generalized _non-linear_ models.
+For **square tables**, we can fit a variety of specialized models, including
+_quasi-independence_, _symmetry_ and _quasi-symmetry_.
+
 ![](images/headers/loglin2.png)
 
 <!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
-<div style="display:flex">
-  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
-  <h4>Topics</h4>
-</div>
+```{r topics8, results='asis', echo=FALSE}
+div_heading("topics")
+```
 
 - Logit models for response variables
 - Models for ordinal factors
@@ -355,14 +362,19 @@ with confidence bands representing uncertainty,
 
 ## GLMs for count data
 
+Here we consider generalized linear models more broadly, with emphasis on those for 
+a count or frequency response variable in the Poisson family.
+Some extensions allow for **overdispersion**, including the _quasi-poisson_
+and _negative binomial_ model.  When the data exhibits a greater frequency of
+0 counts, **zero-infalted** versions of these models come to the rescue.
+
 ![](images/headers/countdata.png)
 
 
 <!-- #### Topics:  `r icon::fa("list", color="darkgreen")` -->
-<div style="display:flex">
-  <i class="fas fa-list" style="color:darkgreen; font-size: 1.25em;"></i> &nbsp;
-  <h4>Topics</h4>
-</div>
+```{r topics9, results='asis', echo=FALSE}
+div_heading("topics")
+```
 
 - Generalized linear models: Families & links
 - GLMs for count data
