--- a/index.Rmd
+++ b/index.Rmd
@@ -63,19 +63,21 @@ div_heading("topics")
 - Graphical methods
 
 <!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
-<div style="display:flex">
-  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
-  <h4>Lecture notes</h4>
-</div>
+<!-- <div style="display:flex"> -->
+  <!-- <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp; -->
+  <!-- <h4>Lecture notes</h4> -->
+<!-- </div> -->
+```{r lecture1, results='asis', echo=FALSE}
+div_heading("lecture")
+```
 
 - [1up PDF](lectures/01-Overview.pdf) || [4up PDF](lectures/01-Overview-2x2.pdf)
 
 
 <!-- #### Readings: `r icon::fa("book-reader", color="blue")`  -->
-<div style="display:flex">
-  <i class="fas fa-book-reader" style="color:blue; font-size: 1.25em;"></i> &nbsp;
-  <h4>Readings</h4>
-</div>
+```{r readings1, results='asis', echo=FALSE}
+div_heading("readings")
+```
 
 **Bold face** items are considered essential. When there are assignments,
 some supplementary readings are mentioned there.
@@ -115,10 +117,9 @@ div_heading("topics")
 - Looking ahead
 
 <!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
-<div style="display:flex">
-  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
-  <h4>Lecture notes</h4>
-</div>
+```{r lecture2, results='asis', echo=FALSE}
+div_heading("lecture")
+```
 
 - [1up PDF](lectures/02-Discrete.pdf) || [4up PDF](lectures/02-Discrete-2x2.pdf)
 
@@ -166,10 +167,9 @@ div_heading("topics")
 
 
 <!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
-<div style="display:flex">
-  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
-  <h4>Lecture notes</h4>
-</div>
+```{r lecture3, results='asis', echo=FALSE}
+div_heading("lecture")
+```
 
 - [1up PDF](lectures/03-Twoway1.pdf) || [4up PDF](lectures/03-Twoway1-2x2.pdf)
 - [Tutorial on two way tables](tutorials/twoway.pdf)
@@ -219,13 +219,19 @@ div_heading("topics")
 - Sequential plots & models
 
 <!-- #### Lecture notes  `r icon::fa("file-pdf", color="red")`  -->
-<div style="display:flex">
-  <i class="fas fa-file-pdf" style="color:red; font-size: 1.25em;"></i> &nbsp;
-  <h4>Lecture notes</h4>
-</div>
+```{r lecture4, results='asis', echo=FALSE}
+div_heading("lecture")
+```
 
 - [1up PDF](lectures/04-Loglin.pdf) || [4up PDF](lectures/04-Loglin-2x2.pdf)
 
+```{r readings4, results='asis', echo=FALSE}
+div_heading("readings")
+```
+- **DDAR**: [Ch 5](VCDR/chapter05.pdf)
+- **Agresti, 2.7; Ch 7**
+
+ 
 ```{r quiz3, results='asis', echo=FALSE}
 div_heading("quiz")
 ```
@@ -264,6 +270,11 @@ div_heading("topics")
 </div>
 
 - [1up PDF](lectures/05-Corresp.pdf) || [4up PDF](lectures/05-Corresp-2x2.pdf)
+
+```{r readings5, results='asis', echo=FALSE}
+div_heading("readings")
+```
+- **DDAR**: [Ch 6](VCDR/chapter06.pdf)
 
 
 ## Logistic regression
@@ -417,3 +428,10 @@ div_heading("topics")
 </div>
 
 - [1up PDF](lectures/Log-Odds.pdf) || [4up PDF](lectures/Log-Odds-2x2.pdf)
+
+```{r readings10, results='asis', echo=FALSE}
+div_heading("readings")
+```
+
+- Friendly & Meyer (2015), [General Models and Graphs for Log Odds and Log
+Odds Ratios](https://www.datavis.ca/papers/CARME2015-2x2.pdf)
