--- a/resources.Rmd
+++ b/resources.Rmd
@@ -95,6 +95,8 @@ that guides you through the steps.
   + [Tests of Independence](https://friendly.github.io/vcdExtra/articles/tests.html)
   + [Mosaic plots](https://friendly.github.io/vcdExtra/articles/mosaics.html)
   + [Loglinear models](https://friendly.github.io/vcdExtra/articles/loglinear.html)
+
+* Short [Making tables in R](tutorials/tables.html) tutorial.
   
 ### Making plots with ggplot2 {#ggplot}
 
